--- a/passatempo/index.html
+++ b/passatempo/index.html
@@ -26,7 +26,7 @@
        </p>  
     </div>
     <div class="column1">
-       <h2> PRAIA </h2>
+       <h2> FAMILIA </h2>
     
        <img src="assets/img/02.png"  height="200" width="200">
         <p>
