marcação de algumas sections

--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, install-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -16,6 +17,66 @@
         <li><a href="">Contato</a></li>
     </ul>
 </nav>
+<header>
+    <div>
+        <p> "Faça o teu melhor, na condição que você tem, enquanto não tem condições melhores, para fazer melhor ainda!"</p>
+        <span>Mario Sergio Cortella</span>
+    </div>
+    <div id="img-rocket">
+        <img src="assets/img/rocket.png"   alt="Imagem de um foguete decolando">
+    </div>
+
+</header>
+<section id="about">
+
+    <div> 
+        <img src="assets/img/me.png"  alt="eu">
+    </div>
+<div>
+    <p>
+        Mussum Ipsum, cacilds vidis litro abertis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Atirei o pau no gatis, per gatis num morreus. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
+        Quem manda na minha terra sou euzis! Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!
+    </p>
+</div>
+
+
+</section>
+
+<section id="projetos">
+    <div>
+        <img src="assets/img/projeto.png" alt="">
+        <h2>Projeto 01</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
+        nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
+        <button>veja mais</button>
+    </div>
+    <div>
+    <img src="assets/img/projeto.png" alt="">
+        <h2>Projeto 02</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
+            nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
+        <button>veja mais</button>
+    </div>
+    <div>
+        <img src="assets/img/projeto.png" alt="">
+        <h2>Projeto 03</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
+            nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
+            <button>veja mais</button>
+    </div>
+    <div>
+    <img src="assets/img/projeto.png" alt="">
+        <h2>Projeto 04</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed fugit minima a perspiciatis 
+            nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
+            <button>veja mais</button>
+        </div>
+    <div>
+        
+    </div>
+</section>
+
+
 </body>
 
 
