--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -11,13 +11,14 @@
 <body>
 <nav>
     <ul>
-        <li><a href="">Saiba mais</a></li>
-        <li><a href="">Projetos</a></li>
-        <li><a href="">Habilidades</a></li>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#projetos">Projetos</a></li>
+        <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="">Contato</a></li>
     </ul>
 </nav>
-<header>
+<header id="inicio">
     <div>
         <p> "Faça o teu melhor, na condição que você tem, enquanto não tem condições melhores, para fazer melhor ainda!"</p>
         <span>Mario Sergio Cortella</span>
@@ -71,9 +72,31 @@
             nostrum non quis esse, eligendi nihil illum numquam, aperiam vitae aliquid ut eum sit similique in officiis!</p>
             <button>veja mais</button>
         </div>
+    
+</section>
+
+<section id="habilidades">
+    <h2>Habilidades Técnicas</h2>
+
+
+    <p>HTML 5</p>
     <div>
-        
+        <span id="html">80%</span>
+
     </div>
+
+    <p>CSS</p>
+    <div>
+        <span id="css">60%</span>
+
+    </div>
+
+    <p>JavaScript</p>
+    <div>
+        <span id="js">40%</span>
+
+    </div>
+
 </section>
 
 
