inclusão do botao js

--- a/projeto01_modulo02/index.html
+++ b/projeto01_modulo02/index.html
@@ -12,11 +12,12 @@
         <div class="cartao" id="cartao">
             <div class="frente">
                 <img src="assets/img/godboy.png" height="300px" width="300px"/>
-                <h1>Pennywise sussegado</h1></div>
+                <span>Pennywise sussegado</span></div>
             <div class="verso">
                 <img src="assets/img/notsowhappy.png" height="300px" width="300px"/>
-                <h1>Pennywise de larica </h1></div>
+                <span>Pennywise de larica </span></div>
         </div>
+        <button>veja mais</button>
     </div>
     
 
