--- a/teste_projetofinalm2/index.html
+++ b/teste_projetofinalm2/index.html
@@ -153,7 +153,12 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">
+                                    <p>Project Name</p>
+                                    <p>Project Name</p>
+                                    <p>Project Name</p>                                
+                                
+                                </div>
                             </div>
                         </a>
                     </div>
